2006-09-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/redeye.c (dialog): use the wilber icon / label
	combination for hints that is also used in colormap-remap.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.[ch]: added gimp_tool_get_options() so tools
	don't need to include "core/gimptoolinfo.h" just to get to their
	options.

	* app/tools/gimp*tool.h: added macros GIMP_FOO_TOOL_GET_OPTIONS()
	which return specific tool options types and do all casting
	themselves.

	* app/tools/*.c: use the new macros and don't include
	"core/gimptoolinfo.h" in most files.

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_register):
	make it use the parent context's FG and BG.

	* app/tools/gimpcolortool.c (gimp_color_tool_real_picked): set the
	color on the tool's options, not on the user context.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpmenudock.c: don't #include "core/gimptoolinfo.h"

2006-09-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	don't specialcase gimp->no_interface; it's a pointless optimization.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	sort the load and save procedures after adding them to the
	database, otherwise there is nothing to sort.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpselectiondata.c: disabled debug spew.

	* plug-ins/common/raw.c: fixed saving of INDEXEDA drawables. Added
	code to load such files. Fixes bug #354034.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.c: switch from a short
	timeout to an idle handler for starting the animation.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_motion): corrected origPR
	extents calculation. Makes the tool work at image borders
	where it used to warn.

	(gimp_heal_laplace_iteration)